# doc-mind-pro

./: .env.example  .gitignore  Dockerfile.txt  Makefile.txt  README.md  api grok.txt  check_db.py  docker-compose.yml  project structure.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run.txt  test_groq.py  test_torch.py
config/: __init__.py  logging_config.py  settings.py
docs/: architecture.md  privacy.md  setup.md
scripts/: backup_data.py  download_models.py  reset_db.py
src/: __init__.py  main.py
src/agents/: __init__.py  interest_analyzer.py  memory_manager.py  response_personalizer.py
src/core/: __init__.py  chunker.py  document_processor.py  embedding_model.py  rag_chain.py  vector_store.py
src/llm/: __init__.py  groq_client.py  model_registry.py  ollama_client.py
src/ui/: __init__.py
src/ui/components/: sidebar.py
src/ui/pages/: admin.py  chat.py  upload.py
src/utils/: __init__.py  file_utils.py  ocr_helper.py  text_cleaner.py
tests/: __init__.py  test_chunker.py  test_document_processor.py  test_rag_chain.py  test_vector_store.py
venv_clean/: pyvenv.cfg
venv_clean/Scripts/: activate  activate.bat
venv_new/: pyvenv.cfg
venv_new/Scripts/: activate  activate.bat
