[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-mind"
version = "1.0.0"
description = "Production-grade RAG system for document Q&A"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your@email.com"}]
dependencies = [
    "streamlit==1.35.0",
    "pypdf==5.4.0",
    "python-docx==1.1.2",
    "chromadb==1.3.0",
    "sentence-transformers==2.2.2",
    "pydantic==2.5.3",
    "python-dotenv==1.0.0",
    "langchain==0.1.0",
    "langchain-core==0.1.52",
    "langchain-community==0.0.10",
    "langchain-chroma==0.1.1",
    "langchain-huggingface==0.0.3",
    "groq==0.13.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.4.2"
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy", "pre-commit"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true